@@ -6,6 +6,7 @@ Open Vehicle Monitor System v3 - Change log
 - #334 Support for SSL/TLS MQTT connections in Server v3
 - #335 Support for SSL/TLS MQTT connections in Server v2
 - #343 TPMS message has no -1 setting for "disable" in ovms_server_v2.cpp
+- #342 OTA updates available (when not on wifi)
 
 2020-02-03 MWJ  3.2.010 OTA release
 - EGPIO: address multiple ports by input & output command
